k3d/k8s-objects/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goapp
  labels:
    app: goapp
spec:
  containers:
  - name: app
    image: omerxx/goapp
    ports:
    - containerPort: 80
