k3d/k8s-objects/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: goapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
